# IntroToAlgorithms3eExercises

./: CMakeLists.txt  utilities.h
ch-2/: CMakeLists.txt  ex-2-2-2.cpp  ex-2-2-3.txt  ex-2-3-2.cpp  ex-2-3-3.txt  ex-2-3-4.txt  ex-2-3-5.cpp  ex-2-3-6.txt  ex-2.1.2.cpp  ex-2.1.3.txt  ex-2.1.4.txt  merge_sort.cpp
